--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="background">
         <div class="stars"></div>
         <div class="content">
-            <h1>Welcome to <span>Zkit</span></h1>
+            <h1>Welcome to <span>Z-Kit</span></h1>
             <p id="randomMessage">beep boop your a goober</p>
             <a href="#">Explore the stars</a>
 
