make random message script load fully before site

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="content">
             <h1>Welcome to <span>Z-Kit</span></h1>
             <p id="randomMessage"> </p>
-            <script>
+            <script defer>
                 const textFilePath = '/assets/splash.txt';
                 
                 async function displayRandomLine() {
