--- a/web.html
+++ b/web.html
@@ -7,37 +7,17 @@
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
   <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+
+  <style>
+    /* CSS goes here */
+  </style>
 </head>
 <body>
-  <div id="particles-js"></div> <!-- Particles.js container -->
+  <div id="particles-js"></div>
   <div class="background">
-    <div class="stars">
-    </div>
-    <div class="content search-page">
-      <input type="text" id="search-bar" placeholder="Search with DuckDuckGo, or enter URL...">
-      <div class="search-directory">
-        <div class="search-tile">
-          <img src="assets/duckduckgo.png" alt="DuckDuckGo">
-        </div>
-        <div class="search-tile">
-          <img src="assets/youtube.png" alt="YouTube">
-        </div>
-        <div class="search-tile">
-          <img src="assets/twitch.png" alt="">
-        </div>
-        <div class="search-tile">
-          <img src="assets/discord.png" alt="Discord">
-        </div>
-        <div class="search-tile">
-          <img src="assets/tiktok.png" alt="TikTok">
-        </div>
-        <div class="search-tile">
-          <img src="assets/spotify.png" alt="Spotify">
-        </div>
-      </div>
-    </div>
+     <!-- HTML goes here -->
   </div>
-  
+
   <div class="sidebar">
     <div class="logo-container">
       <img src="assets/logo.png" class="logo" alt="Logo">
@@ -77,27 +57,14 @@
     </div>
   </div>
 
+  <script>
+    /* Script goes here */
+  </script>
+
   <script src="assets/js/particles.min.js"></script>
   <script>
     particlesJS.load('particles-js', 'assets/json/particlesjs-config.json', function() {
       console.log('particles.js loaded');
-    });
-  </script>
-
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      const searchBar = document.getElementById('search-bar');
-      const searchDirectory = document.querySelector('.search-directory');
-      
-      searchBar.addEventListener('focus', function() {
-        searchBar.classList.add('active');
-        searchDirectory.classList.add('hidden');
-      });
-      
-      searchBar.addEventListener('blur', function() {
-        searchBar.classList.remove('active');
-        searchDirectory.classList.remove('hidden');
-      });
     });
   </script>
 </body>
