--- a/home.html
+++ b/home.html
@@ -42,12 +42,12 @@
         displayRandomLine();
       </script>
 
-      <a href="search.html">Explore the stars</a>
+      <a href="search.html">Get started!</a>
 
-      <div class="home-directory">
+      <!-- <div class="home-directory">
         <div class="home-tile">Games</div>
         <div class="home-tile">Apps</div>
-      </div>
+      </div> -->
     </div>
   </div>
 
@@ -59,49 +59,44 @@
     <div class="divider"></div>
     <div class="nav-item">
       <a href="home.html">
-        <span class="material-symbols-outlined">
-          home
-        </span>
+        <span class="material-symbols-outlined">home</span>
       </a>
     </div>
     <div class="divider"></div>
     <div class="nav-item">
       <a href="search.html">
-        <span class="material-symbols-outlined">
-          search
-        </span>
+        <span class="material-symbols-outlined">search</span>
       </a>
     </div>
     <div class="nav-item">
       <a href="games.html">
-        <span class="material-symbols-outlined">
-          stadia_controller
-        </span>
+        <span class="material-symbols-outlined">stadia_controller</span>
       </a>
     </div>
     <div class="nav-item">
       <a href="apps.html">
-        <span class="material-symbols-outlined">
-          apps
-        </span>
+        <span class="material-symbols-outlined">apps</span>
       </a>
     </div>
     <div class="divider"></div>
     <div class="nav-item">
       <a href="about.html">
-        <span class="material-symbols-outlined">
-          info
-        </span>
+        <span class="material-symbols-outlined">info</span>
       </a>
     </div>
     <div class="nav-item">
       <a href="settings.html">
-        <span class="material-symbols-outlined">
-          settings
-        </span>
+        <span class="material-symbols-outlined">settings</span>
       </a>
     </div>
   </div>
+
+  <script src="assets/js/particles.min.js"></script>
+  <script>
+    particlesJS.load('particles-js', 'assets/json/particlesjs-config.json', function() {
+      console.log('particles.js loaded');
+    });
+  </script>
 </body>
 
 </html>
