Update iframe sandboxing

--- a/game.html
+++ b/game.html
@@ -110,7 +110,7 @@
   </div>
 
   <div class="floating-container" id="floatingContainer" style="display: none;">
-    <iframe id="gameIframe" name="firefoxHatesIframes"></iframe>
+    <iframe id="gameIframe" name="firefoxHatesIframes" sandbox="allow-scripts allow-pointer-lock allow-forms allow-same-origin allow-downloads" allowfullscreen="true" frameborder="0"></iframe>
     <div class="game-title" id="gameTitle"></div>
     <div class="controls">
       <button class="control-btn material-symbols-outlined" onclick="reloadGame()">refresh</button>
