--- a/games.html
+++ b/games.html
@@ -143,11 +143,11 @@
         <span class="material-symbols-outlined">info</span>
       </a>
     </div>
-    <div class="nav-item">
+    <!-- <div class="nav-item">
       <a href="settings.html">
         <span class="material-symbols-outlined">settings</span>
       </a>
-    </div>
+    </div> -->
   </div>
   <div class="background">
     <input type="text" id="search-bar" placeholder="Search games...">
