--- a/search.html
+++ b/search.html
@@ -25,7 +25,7 @@
         <div class="search-tile" data-url="https://twitch.tv">
           <img src="assets/twitch.png" alt="">
         </div>
-        <div class="search-tile" data-url="https://discord.com">
+        <div class="search-tile" data-url="https://e.widgetbot.io/channels/1341303023107837982/1341442897567813702">
           <img src="assets/discord.png" alt="Discord">
         </div>
         <div class="search-tile" data-url="https://tiktok.com">
