fix iframe sandboxing

--- a/web.html
+++ b/web.html
@@ -127,7 +127,7 @@
   </div>
 
   <div class="iframe-container">
-    <iframe id="website-viewer" src=""></iframe>
+    <iframe id="website-viewer" sandbox="allow-scripts allow-pointer-lock allow-forms allow-same-origin allow-downloads allow-pointer-lock" allowfullscreen="true" frameborder="0" src=""></iframe>
   </div>
 
   <script>
