Fix about.html for smaller resolutions

--- a/about.html
+++ b/about.html
@@ -34,17 +34,23 @@
       padding: 0;
     }
     .content {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
       padding: 20px;
       max-width: 800px;
       margin: auto;
     }
     .content section {
+      flex: 1 1 48%;
       margin-bottom: 40px;
       background: rgba(30, 30, 30, 0.2);
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       backdrop-filter: blur(10px);
+      display: flex;
+      flex-direction: column;
     }
     .content h2 {
       font-size: 2.5em;
@@ -54,6 +60,7 @@
     .content p {
       font-size: 1.2em;
       line-height: 1.6;
+      flex-grow: 1;
     }
     .partners-section {
       display: flex;
