--- a/about.html
+++ b/about.html
@@ -52,6 +52,11 @@
       display: flex;
       flex-direction: column;
     }
+    @media (max-width: 1080px) {
+      .content section {
+        flex: 1 1 100%;
+      }
+    }
     .content h2 {
       font-size: 2.5em;
       margin-bottom: 10px;
