--- a/z/404.html
+++ b/z/404.html
@@ -181,7 +181,7 @@
           <h1>Ultraviolet | Error</h1>
         </div>
         <div class="desc">
-          <p>If you see this, either we have linked to the wrong page, or the Service Worker is not registered on your browser. Please press the button below to fix this. If pressing the button does not work, please contact the developers.</p>
+          <p>If you see this, the Service Worker is not registered on your browser. Please press the button below to fix this, and then refresh the page. If it is a game, the refresh button is in the bottom right. If it is anything else, the refresh button is in the navbar in the top.</p>
           <p id="uv-error"></p>
           <code id="uv-error-code"></code>
           <button id="uv-register-sw">
