--- a/z/404.html
+++ b/z/404.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Z-Kit | Error</title>
+    <title>Z-Kit</title>
     <meta
       name="theme-color"
       media="(prefers-color-scheme: dark)"
@@ -178,7 +178,7 @@
     <div class="container">
       <div class="error-card">
         <div class="logo-wrapper">
-          <h1>Ultraviolet | Error</h1>
+          <h1>Ultraviolet error!</h1>
         </div>
         <div class="desc">
           <p>If you see this, the Service Worker is not registered on your browser. Please press the button below to fix this, and then refresh the page. If it is a game, the refresh button is in the bottom right. If it is anything else, the refresh button is in the navbar in the top.</p>
@@ -191,7 +191,7 @@
       </div>
     </div>
     <footer>
-      <a title="License information" href="credits.html">Credits</a>
+      <a title="License information" href="https://github.com/titaniumnetwork-dev/Ultraviolet/blob/main/LICENSE" target="_blank" rel="noopener noreferrer">License</a>
       <span>Ultraviolet &copy; TN 2025</span>
     </footer>
     <script src="uv/uv.bundle.js" charset="UTF-8"></script>
