--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
     </section>
     <section id="credits">
       <h2>Credits</h2>
-      <p>VRTZ - UI developer, thank you SO MUCH
+      <p>WydSculted - Releasing + making unblockable
         <br>3kh0 - Almost every game, and developer of ext remover
         <br>Blobby Boi - Developer of ExtPrint3r
         <br>TitaniumNetwork - Developer of Ultraviolet
