--- a/about.html
+++ b/about.html
@@ -158,14 +158,14 @@
     <section id="about">
       <h2>About</h2>
       <p>Z-Kit is a fast and modern proxy website, that uses cloaking to remain permanently unblockable.
-        <br>Because Z-Kit uses a launcher to start, it is extremely easy to host your very own Z-Kit. You just need the ability to upload a single HTML file.
+        <br>Because Z-Kit uses a launcher to start, making it seamless, and 99% unblockable (your welcome)
         <br>It is also very easy to use, with a simple and clean UI.
         <br>This site includes a web proxy, games, and apps.
       </p>
     </section>
     <section id="credits">
       <h2>Credits</h2>
-      <p>WydSculted - Releasing + making unblockable
+      <p>WydSculted - Website HTML Developer + UI
         <br>3kh0 - Almost every game, and developer of ext remover
         <br>Blobby Boi - Developer of ExtPrint3r
         <br>TitaniumNetwork - Developer of Ultraviolet
