--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="benrogo:index", content="index">
     <meta property="benrogo:uvpath", content="/z/kit/uv.config.js">
     
-    <title>Z-Kit Launcher</title>
+    <title>Securly Who? Launcher</title>
     <style>
         * {
             margin: 0;
