--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     </div>
 
     <script>
-        const url = "https://zkit.above.gay/home";
+        const url = "securlywho.unblocked.gg";
 
         document.getElementById('pre-saved-options').addEventListener('change', (e) => {
             const titleInput = document.getElementById('title-input');
