--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
   <div class="background">
     <div class="stars"></div>
     <div class="content">
-      <h1>Welcome to <span>Z-Kit</span></h1>
+      <h1>Welcome to <span>Securly Who</span></h1>
       <p id="randomMessage"> </p>
 
       <script defer>
