--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <div class="container">
-        <h1>Z-Kit Launcher</h1>
+        <h1>Securly Who Launcher</h1>
         
         <label for="title-input">Page Title</label>
         <input type="text" id="title-input" placeholder="New Tab" value="New Tab"/>
