--- a/embed.html
+++ b/embed.html
@@ -200,9 +200,9 @@
         });
     </script>
 
-    <script src="z/kit/uv.bundle.js"></script>
-    <script src="z/kit//uv.config.js"></script>
-    <script src="z/register-sw.js"></script>
+    <script src="securly/who/uv.bundle.js"></script>
+    <script src="securly/who/uv.config.js"></script>
+    <script src="securly/register-sw.js"></script>
     <script src="assets/js/embed.js"></script>
 </body>
 </html>
